8359327: Incorrect AVX3Threshold results into code buffer overflows on APX targets

Reviewed-by: chagedorn
Backport-of: e7f63ba3109adf614cee1bc392cfeef85e9ca778